<resources>
    <string name="app_name">The City</string>
    <string name="city_name">Bandung</string>
    <string name="city_address">Jawa Barat, Indonesia</string>
    <string name="about_text">Diese App wurde von Niklas Tarkel und Lukas Hammer entwickelt. Wir sind Studenten des Fachs Mobile Computing und haben diese Anwendung erstellt, um Ihnen eine großartige Erfahrung zu bieten. Vielen Dank, dass Sie unsere App verwenden! </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profil</string>
    <string name="title_nav_all">Alle Sportbereiche</string>
    <string name="title_nav_fav">Meine Favoriten</string>
    <string name="title_nav_news">Deine News</string>
    <string name="title_nav_ownplaces">Eigene Orte</string>
    <string name="title_nav_calesthenics">Calesthenics</string>
    <string name="title_nav_parcouring">Parcouring</string>
    <string name="title_nav_outdoor">Outdoor</string>
    <string name="title_nav_outdoorGyms">Outdoor Gyms</string>
    <string name="image_of">%1$d of %2$d</string>
    <string name="press_again_exit_app">Press again to exit</string>
    <string name="no_item_at">No Item at</string>
    <string name="dialog_content_gps">
        GPS is disabled in your device. Would you like to enable it?
    </string>
    <string name="activity_title_maps">@string/title_nav_all</string>
    <string name="add_favorite">Hinzugefügt zu Favouriten!</string>
    <string name="remove_favorite">Entfernt von Favouriten!</string>
    <string name="no_phone_number">do not have a phone</string>
    <string name="no_website">do not have a website</string>
    <string name="fail_dial_number">Cannot dial phone number</string>
    <string name="fail_open_website">Cannot open website</string>
    <string name="unable_create_map">Sorry! unable to create maps</string>
    <string name="failed_load_details">Failed load place details</string>
    <string name="photos_title">Photos</string>
    <string name="description_title">Description</string>
    <string name="comment_title">Bewertung</string>
    <string name="post_comment">Kommentare hinzufügen</string>
    <string name="map_title">Map</string>
    <string name="map_view">VIEW</string>
    <string name="map_navigate">NAVIGATE</string>
    <string name="button_comment_post">Kommentar hinzufügen</string>
    <string name="hint_Comment">Kommentar hier eingeben</string>
    <string name="hint_search">Search Place...</string>
    <string name="please_fill">Please fill search input</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="developer_name">Dream Space</string>
    <string name="copyright">Copyright © 2016 Dream Space. \nAll right reserved</string>
    <string name="pref_category_notif">Notifications</string>
    <string name="pref_category_display">Display</string>
    <string name="pref_category_other">Others</string>
    <string name="pref_title_notif">Push Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_cache">Clear Image Cache</string>
    <string name="pref_title_theme">Theme Color</string>
    <string name="pref_title_more">More Apps</string>
    <string name="pref_title_rate">Rate</string>
    <string name="pref_title_about">About</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_copyright">Copyright</string>
    <string name="pref_title_dev_name">Developed By</string>
    <string name="pref_title_term">Term &amp; Policies</string>
    <string name="pref_key_notif">key_notifications</string>
    <string name="pref_key_ringtone">key_ringtone</string>
    <string name="pref_key_vibrate">key_vibrate</string>
    <string name="pref_key_reset_cache">key_reset_cache</string>
    <string name="pref_key_theme">key_theme</string>
    <string name="dialog_confirm_title">Confirmation</string>
    <string name="dialog_about_title">About</string>
    <string name="activity_title_settings">Settings</string>
    <string name="message_clear_image_cache">Are you sure want to clear image cache?</string>
    <string name="message_after_clear_image_cache">Image cache successfully clear</string>
    <string name="title_dialog_theme">Color Theme</string>
    <string name="grant_permission_account_storage">Grant account, storage permission to enable</string>
    <string name="content_term">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dolor risus, aliquet a erat quis, viverra molestie orci. Suspendisse vehicula porta libero. Nam tincidunt nulla ipsum, vel iaculis risus scelerisque sed. Phasellus venenatis, enim vel placerat blandit, leo eros bibendum erat, at auctor mauris diam ac risus. Aenean sit amet congue neque, sit amet condimentum elit. Fusce lacinia massa vel nisl scelerisque, in scelerisque dolor elementum. Vivamus leo enim, congue dictum congue vitae, porttitor id purus. Sed eu ultricies erat. Morbi hendrerit, mi ac volutpat commodo, magna turpis pretium nibh, at fringilla eros lorem quis tellus. Praesent porttitor purus nibh, ac vestibulum massa fringilla vel. Pellentesque dapibus nulla quis luctus dictum. In scelerisque ut ex sed facilisis. Nunc eu finibus nulla, ut hendrerit sem. Suspendisse accumsan risus vel diam fringilla iaculis.
        \n\nQuisque facilisis finibus aliquam. Sed mattis, dui fringilla ornare finibus, orci odio blandit risus, ut maximus dui odio non leo. Donec laoreet lacus nisi, a mollis velit suscipit ac. Quisque faucibus ut nisl in congue. Nam sagittis consectetur tempus. Suspendisse eget posuere dui. Donec ultricies velit ex, vel cursus odio sollicitudin in. Nullam faucibus auctor ligula, eu rhoncus dui facilisis a. Curabitur vel feugiat est. Quisque congue at enim eleifend ultrices. Proin dapibus risus lorem, nec condimentum nunc consequat vitae. Quisque sapien lorem, vestibulum vitae justo eget, fringilla eleifend nisi.
        \n\nMauris ultricies augue sit amet est sollicitudin laoreet. Fusce ut congue felis. Fusce dictum tristique elit nec iaculis. Mauris sodales tempus fringilla. Fusce nec nunc tempus, tempor sapien sit amet, ultricies erat. Mauris ultrices ac lorem ultrices facilisis. Nam pharetra, nisi a imperdiet interdum, nunc justo ultricies nisl, a laoreet massa dui vel enim. Pellentesque et magna ac tellus ullamcorper malesuada a ac nisl. Curabitur id est et neque convallis accumsan. Aliquam eleifend varius massa. Curabitur eu finibus tortor.
        \n\nVivamus aliquam nisl rutrum orci volutpat porta in ornare est. Quisque ligula ipsum, vulputate id aliquam vitae, semper vitae orci. Nam non pulvinar ligula, eget tincidunt ante. Quisque sapien massa, varius tempus pretium id, vehicula at magna. Ut ut ultrices augue. Nam nec ullamcorper tellus, at finibus lectus. Fusce vel iaculis mauris, id porta nulla. Aenean ac mollis sapien. Morbi imperdiet augue tempus nulla luctus, sit amet feugiat purus elementum.
    </string>
    <string name="splash_welcome_text">WELCOME</string>
    <string name="splash_desc_text">Browse all the interesting place using The City app</string>
    <string name="refresh_failed">Refresh failed</string>
    <string name="load_of">Load %1$d of %2$d</string>
    <string name="load_success">Successfully load data</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet">"No internet connection"</string>
    <string name="task_running">Task still running</string>
    <string name="no_item">No Item</string>
    <string name="OK">OK</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="SETTING">SETTING</string>
    <string name="CANCEL">CANCEL</string>
    <string name="SAVE">SAVE</string>
    <string name="DISMISS">DISMISS</string>
    <string name="HIDE">HIDE</string>
    <string name="RETRY">RETRY</string>
    <string name="DETAILS">DETAILS</string>
    <string name="FAILED">FAILED</string>
    <string name="title_activity_new_place">ActivityNewPlace</string>
</resources>