<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/ic_menu_category"
        android:title="Category"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/nav_all"
                android:title="@string/title_nav_all"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_favorites"
                android:title="@string/title_nav_fav"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_news"
                android:title="@string/title_nav_news"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_ownplaces"
                android:title="@string/title_nav_ownplaces"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_calesthenics"
                android:title="@string/title_nav_calesthenics"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_parcouring"
                android:title="@string/title_nav_parcouring"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_outdoor"
                android:title="@string/title_nav_outdoor"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_outdoorGyms"
                android:title="@string/title_nav_outdoorGyms"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>
